--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"> 
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="body">
@@ -42,8 +43,10 @@
       <!--hero-->
 
       <section class="hero">
+        <div class="conteiner">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-button">Замовити послугу</button>
+        </div>
       </section>
 
       <!--features-->
