--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" > 
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="body">
-    <header>
+    <header class="page-header">
       <!-- logo-heder -->
 
       <a
@@ -26,11 +26,11 @@
 
       <!--navimenu-->
 
-      <nav>
+      <nav class="navimenu">
         <ul class="site-nav">
-          <li><a href="#" class="link">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li class="item"><a href="#" class="link">Студія</a></li>
+          <li class="item"><a href="#">Контакти</a></li>
+          <li class="item"><a href="./portfolio.html">Портфоліо</a></li>
         </ul>
       </nav>
 
@@ -52,7 +52,8 @@
       <!--features-->
 
       <section class="fetures">
-        <ul>
+        <div class="container">
+        <ul class="features-menu">
           <li>
             <h2 class="fetures-title">УВАГА ДО ДЕТАЛЕЙ</h2>
             <p class="fetures-text">
@@ -81,65 +82,72 @@
             </p>
           </li>
         </ul>
+        </div>  
       </section>
 
       <!--activity-->
 
       <section class="activity">
+        <div class="container">
         <h2 class="activity-title">Чим займаємося</h2>
         <img src="images/box1.jpg" alt="printedcod" width="370" />
         <img src="images/box2.jpg" alt="audit37" width="370" />
         <img src="images/box3.jpg" alt="graphics design" width="370" />
+      </div>
       </section>
 
       <!--our team-->
 
       <section class="our-team">
+        <div class="container">
         <h2 class="team">Наша команда</h2>
-        <figure>
+        <ul class="team-icone">
+
+          <li>
           <img src="images/img11.jpg" alt="igor demianenko" width="270" />
-          <figcaption>
             <h3 class="name">Ігор Дем'яненко</h3>
             <p class="position">Product Designer</p>
-          </figcaption>
-        </figure>
-        <figure>
+        </li>
+
+        <li>
           <img src="images/img12.jpg" alt="olga repina" width="270" />
-          <figcaption>
             <h3 class="name">Ольга Рєпіна</h3>
             <p class="position">Frontend Developer</p>
-          </figcaption>
-        </figure>
-        <figure>
+        </li>
+
+        <li>
           <img src="images/img21.jpg" alt="mikola tarasov" width="270" />
-          <figcaption>
             <h3 class="name">Микола Тарасов</h3>
             <p class="position">Marketing</p>
-          </figcaption>
-        </figure>
-        <figure>
-          <img src="images/img31.jpg" alt="mihail_ermackov" width="270" />
-          <figcaption>
+          </li>
+
+        
+        <li>
+          <img src="images/img31.jpg" alt="mihail_ermackov" width="270" />        
             <h3 class="name">Михайло Єрмаков</h3>
-            <p class="position">UI Designer</p>
-          </figcaption>
-        </figure>
+            <p class="position">UI Designer</p>         
+
+        </li>
+        </ul>
+        </div>
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-line">
+      <div class="container">
       <a
         href=" https://bodia0210.github.io/goit-markup-hw-01"
         class="logo-footer"
         >Web<span>Studio</span>
       </a>
-      <address>
+      <address class="footer-addres">
         <p class="address">м. Київ, пр-т Лесі Українки, 26</p>
         <a href="info@devstudio.com" class="footer-contacts"
           >info@devstudio.com</a
         >
         <a href="tel:+380961111111" class="footer-contacts">+380961111111</a>
       </address>
+      </div>
     </footer>
   </body>
 </html>
