--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="body">
-    <header>
+    <header class="page-header">
       <!-- logo-heder -->
 
       <a
@@ -26,11 +26,11 @@
 
       <!--navimenu-->
 
-      <nav>
+      <nav class="navimenu">
         <ul class="site-nav">
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="#" class="link">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li class="item"><a href="#" class="link">Портфоліо</a></li>
+          <li class="item"><a href="./index.html">Студія</a></li>
+          <li class="item"><a href="#">Контакти</a></li>
         </ul>
       </nav>
 
@@ -41,13 +41,13 @@
     </header>
     <main>
       <!--hero-->
-
+<div class="container">
       <section>
         <!--Button-->
 
         <h1 hidden>WebStudio</h1>
 
-        <ul>
+        <ul class="filter">
           <li><button type="button" class="filr-button">Усі</button></li>
           <li><button type="button" class="filr-button">Веб-сайти</button></li>
           <li><button type="button" class="filr-button">Додатки</button></li>
@@ -57,7 +57,7 @@
       </section>
       <!--Foto-->
 
-      <ul>
+      <ul class="icon-menu">
         <li>
           <a href="">
             <img src="images/portf1.jpg" alt="tehnokriak website" width="370" />
@@ -65,6 +65,15 @@
             <p class="project-type">Веб-сайт</p>
           </a>
         </li>
+
+        <li>
+          <a href="">
+            <img src="images/portf2.jpg" alt="New Orlean vs Golden Star" width="370" />
+            <h2 class="projeck-name">Постер New Orlean vs Golden Star</h2>
+            <p class="project-type">Дизайн</p>
+          </a>
+        </li>
+
 
         <li>
           <a href="">
@@ -102,11 +111,19 @@
           </a>
         </li>
 
+<li>
+  <a href="">
+    <img src="images/portf7.jpg" alt="Projekt LAB" width="370" />
+    <h2 class="projeck-name">Проєкт LAB</h2>
+    <p class="project-type">Маркетинг</p>
+  </a>
+</li>
+        
         <li>
           <a href="">
-            <img src="images/portf8.jpg" alt="Projekt LAB" width="370" />
-            <h2 class="projeck-name">Проєкт LAB</h2>
-            <p class="project-type">Маркетинг</p>
+            <img src="images/portf8.jpg" alt="Limited Edition" width="370" />
+            <h2 class="projeck-name">Видання Limited Edition</h2>
+            <p class="project-type">Дизайн</p>
           </a>
         </li>
 
@@ -118,21 +135,24 @@
           </a>
         </li>
       </ul>
+    </div>
     </main>
 
-    <footer>
+    <footer class="footer-line">
+      <div class="container">
       <a
         href=" https://bodia0210.github.io/goit-markup-hw-01"
         class="logo-footer"
         >Web<span>Studio</span>
       </a>
-      <address>
+      <address class="footer-addres">
         <p class="address">м. Київ, пр-т Лесі Українки, 26</p>
         <a href="info@devstudio.com" class="footer-contacts"
           >info@devstudio.com</a
         >
         <a href="tel:+380961111111" class="footer-contacts">+380961111111</a>
       </address>
+      </div>
     </footer>
   </body>
 </html>
