--- a/portfolio.html
+++ b/portfolio.html
@@ -17,17 +17,16 @@
   <body class="body">
     <header class="line-header" >
     <div class="container">
-      <!-- logo-heder -->
-
-      <a
-        href=" https://bodia0210.github.io/goit-markup-hw-01/ "
-        class="logo-heder"
-        >Web<span>Studio</span>
-      </a>
 
       <!--navimenu-->
 
       <nav class="header-nav">
+
+        <!-- logo-heder -->
+
+        <a href=" https://bodia0210.github.io/goit-markup-hw-01/ " class="logo-heder">Web<span>Studio</span>
+        </a>
+        
         <ul class="site-nav">
           <li class="item"><a href="#" class="link">Студія</a></li>
           <li class="item"><a href="./portfolio.html">Портфоліо</a></li>
